[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "mlport"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
mlport = "mlport.__main__:main"

[tool.kedro]
package_name = "mlport"
project_name = "mlport"
kedro_init_version = "0.19.5"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "mlport.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
